deploy/deployApplication-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: dojo-staging
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-dojo
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-dojo
    spec:
      containers:
      - image: 018008741390.dkr.ecr.us-east-2.amazonaws.com/dojo-dojo:staging 
        imagePullPolicy: Always
        name: app-dojo
        resources:
          requests:
            cpu: '1'
            memory: 2G
          limits:
            cpu: '2'
            memory: 4G
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: service-dojo
spec:
  ports:
    - port: 443
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-dojo        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dojo
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-dojo
            port:
              number: 443
